# diffcolor

./: CMakeLists.txt  LICENSE  README.md  color_emitter.h  coloremitter.h  console_color_emitters.cpp  diff_consumer.h  diff_consumers.cpp  diff_parser.cpp  diff_parser.h  diffcolor.cpp
